--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "lint":"eslint .",
     "build:ui": "rm -rf build && cd ../part2/phonebook && npm run build && cp -r build ../../part3-3.10",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
@@ -22,6 +23,7 @@
     "morgan": "1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.8.0",
     "nodemon": "^2.0.15"
   }
 }
